--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "@parcel/transformer-pug": "^2.10.3",
         "bootstrap": "5.2.3",
         "jquery": "^3.7.1",
-        "parcel": "^2.10.3"
+        "parcel": "^2.10.3",
+        "sharp": "^0.33.0"
     },
     "devDependencies": {
         "@parcel/packager-raw-url": "^2.10.3",
