--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,31 +8,29 @@ on:
 
 jobs:
   build:
+      runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
+      strategy:
+          matrix:
+              node-version: [20.x]
 
-    strategy:
-      matrix:
-        node-version: [20.x]
+      steps:
+          - uses: actions/checkout@v3
 
-    steps:
-      - uses: actions/checkout@v3
+          - name: Use Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          - run: corepack enable
 
-      - run: npm ci
-      - run: npm run build --if-present
-      
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist
-          path: dist/
-      
+          - run: yarn install --frozen-lockfile
+          - run: yarn build
+
+          - name: Archive production artifacts
+            uses: actions/upload-artifact@v3
+            with:
+                name: dist
+                path: dist/
+
   deploy:
     if: github.ref == 'refs/heads/master' && github.event_name == 'push'
     needs: build
@@ -42,7 +40,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
-          
+
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
