--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "url": "https://github.com/JustSamuel/dispuutivv"
     },
     "dependencies": {
+        "@parcel/config-default": "^2.12.0",
+        "@parcel/core": "^2.12.0",
         "@parcel/transformer-pug": "^2.12.0",
         "bootstrap": "5.2.3",
         "jquery": "^3.7.1",
@@ -45,5 +47,6 @@
         "sass": "^1.77.0",
         "shelljs": "0.8.5",
         "upath": "2.0.1"
-    }
+    },
+    "packageManager": "yarn@4.5.1"
 }
