--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
         "url": "https://github.com/JustSamuel/dispuutivv"
     },
     "dependencies": {
-        "@parcel/config-default": "^2.12.0",
-        "@parcel/core": "^2.12.0",
-        "@parcel/transformer-pug": "^2.12.0",
+        "@parcel/config-default": "^2.13.0",
+        "@parcel/core": "^2.13.0",
+        "@parcel/transformer-pug": "^2.13.0",
         "bootstrap": "5.3.3",
         "jquery": "^3.7.1",
         "parcel": "^2.13.0",
-        "sharp": "^0.31.3"
+        "sharp": "^0.33.5"
     },
     "devDependencies": {
-        "@parcel/packager-raw-url": "^2.12.0",
-        "@parcel/transformer-sass": "^2.12.0",
-        "@parcel/transformer-webmanifest": "^2.12.0",
+        "@parcel/packager-raw-url": "^2.13.0",
+        "@parcel/transformer-sass": "^2.13.0",
+        "@parcel/transformer-webmanifest": "^2.13.0",
         "autoprefixer": "10.4.20",
         "browser-sync": "3.0.3",
         "chokidar": "4.0.1",
@@ -46,6 +46,7 @@
         "pug": "^3.0.3",
         "sass": "^1.80.6",
         "shelljs": "0.8.5",
+        "svgo": "^3",
         "upath": "2.0.1"
     },
     "packageManager": "yarn@4.5.1"
