chore(dependabot): group parcel

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,11 @@
 version: 2
 updates:
-  - package-ecosystem: "npm" # Specify npm as the package manager
-    directory: /
-    schedule:
-      interval: "weekly" # Set the update schedule to weekly
+    - package-ecosystem: "npm"
+      directory: /
+      schedule:
+          interval: "weekly"
+      groups:
+          parcel:
+              patterns:
+                  - "^parcel$"
+                  - "^@parcel/"
