--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,9 +16,14 @@ jobs:
             build: true
             test: false
 
-    dockerize:
+    docker-release:
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         needs: build-and-lint
-        uses: GEWIS/actions/.github/workflows/docker-build.yml@v1
+        uses: GEWIS/actions/.github/workflows/docker-release.yml@v1
         with:
             projects: '["."]'
+            github-registry: 'true'
+            docker-registry: 'ghcr.io'
+            docker-path: 'justsamuel/dispuutivv'
+            version: 'main'
+
