ci: dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,5 @@ updates:
       groups:
           parcel:
               patterns:
-                  - "^parcel$"
-                  - "^@parcel/"
+                  - "parcel"
+                  - "@parcel/*"
